Fixed the spacing used in the title bar when the calendar is viewed on a mobile device.

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -396,6 +396,7 @@ div.calendar {
         div.title-container {
             display: inline-block;
             position: relative;
+            font-size: $large-font-size !important;
 
             span {
                 white-space: nowrap;
